Introduced TargetArchitecture enumeration.